# study_langchain

./: .tool-versions  README.md  chat_bot.ipynb  chat_bot.py  chat_bot__managing_hitory.ipynb  config.py  example_dot_env  getting_start.ipynb  langsmit.ipynb  langsmit.py  pyproject.toml  serve.py  start.py  vector_store_and_retrievers.ipynb
.ipynb_checkpoints/: chat_bot-checkpoint.ipynb
